--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,35 @@ h1 {
   text-align: center;
 }
 
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  border: 2px solid;
+  border-radius: 0.5rem;
+}
+
+.guest-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+}
+
+.guest-details p {
+  padding: 0;
+}
+
+button {
+  padding: 0.5rem 3rem;
+  border-radius: 0.5rem;
+}
+
 table {
   border-collapse: collapse;
 }
@@ -17,6 +46,10 @@ tbody tr {
   cursor: pointer;
 }
 
+tbody tr:nth-child(odd) {
+  background: rgba(211, 211, 211, 0.432);
+}
+
 tbody tr:hover {
-  background-color: yellow;
+  background-color: rgba(255, 255, 0, 0.658);
 }
